--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ a {
   /*トップ画像全画面表示*/
 }
 .headerTop__img {
-  background-image: url(/images/top-1920-1080non.jpg);
+  background-image: url(../images/top-1920-1080non.jpg);
   min-height: 100vh;
   background-size: cover;
   background-position: center top;
