--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,7 +61,7 @@ a {
 
   /*トップ画像全画面表示*/
   &__img {
-    background-image: url(/images/top-1920-1080non.jpg);
+    background-image: url(../images/top-1920-1080non.jpg);
     min-height: 100vh;
     background-size: cover;
     background-position: center top;
