--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -229,7 +229,7 @@ scroll span {
 
 #gNav .gNav-menu {
   width: 100%;
-  height: 20px;
+  height: 30%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
