--- a/portfolio/scss/style.scss
+++ b/portfolio/scss/style.scss
@@ -232,7 +232,7 @@ position: fixed;
 }
 #gNav .gNav-menu{
 	width: 100%;
-	height:20px;
+	height:30%;
 	display: flex;
 	flex-direction: column;
 	text-align: center;
