--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -237,6 +237,43 @@ scroll span {
   z-index: 2;
 }
 
+#hamburger .btn-gNav.open span:nth-child(1) {
+  top: 10px;
+  left: -15px;
+  -webkit-transform: translateY(6px) rotate(-45deg);
+          transform: translateY(6px) rotate(-45deg);
+  width: 100%;
+}
+
+#hamburger .btn-gNav.open span:nth-child(2) {
+  opacity: 0;
+}
+
+#hamburger .btn-gNav.open span:nth-child(3) {
+  top: 22px;
+  left: -15px;
+  -webkit-transform: translateY(-6px) rotate(45deg);
+          transform: translateY(-6px) rotate(45deg);
+  width: 100%;
+}
+
+#gNav.open {
+  right: 0px;
+}
+
+#gNav .gNav-menu {
+  width: 100%;
+  height: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
 @media screen and (min-width: 768px) {
   .btn-gNav {
     display: none;
