--- a/portfolio/scss/style.scss
+++ b/portfolio/scss/style.scss
@@ -240,6 +240,36 @@ scroll {
   z-index: 2;
 }
 
+//閉じる
+#hamburger .btn-gNav.open span:nth-child(1) {
+  top: 10px;
+  left: -15px;
+  transform: translateY(6px) rotate(-45deg);
+  width: 100%;
+}
+
+#hamburger .btn-gNav.open span:nth-child(2) {
+  opacity: 0;
+}
+
+#hamburger .btn-gNav.open span:nth-child(3) {
+  top: 22px;
+  left: -15px;
+  transform: translateY(-6px) rotate(45deg);
+  width: 100%;
+}
+
+#gNav.open {
+  right: 0px;
+}
+
+#gNav .gNav-menu {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
 
 @media screen and (min-width: 768px) {
   .btn-gNav {
